[package]
name = "wmata-fire-alarm"
version = "0.1.0"
edition = "2024"

[dependencies]
argfile = { version = "0.2.1", optional = true }
axum = "0.8.8"
clap = { version = "4.5.54", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", optional = true }
env_logger = { version = "0.11.8", optional = true }
lettre = { version = "0.11.19", features = ["serde", "tokio1-native-tls"] }
log = { version = "0.4.29", optional = true }
rand = "0.9.2"
sea-orm = { version = "1.1.19", features = [
    "runtime-tokio-native-tls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }

[features]
env = ["clap/env"]
argfile = ["dep:argfile"]
log = ["dep:clap-verbosity-flag", "dep:env_logger", "dep:log"]
